[gd_scene format=3 uid="uid://cpdst8itemped"]

[ext_resource type="Script" path="res://Scripts/Items/ItemPedestal.gd" id="1_pedestal"]

[node name="ItemPedestal" type="Node2D"]
script = ExtResource("1_pedestal")

[node name="PedestalSprite" type="Node2D" parent="."]
position = Vector2(0, 16)

[node name="ItemContainer" type="Node2D" parent="."]
position = Vector2(0, -8)
